--- a/Aspect_Analysis.Rmd
+++ b/Aspect_Analysis.Rmd
@@ -18,51 +18,36 @@ tmap_mode("view")
 options(tigris_use_cache = TRUE)
 ```
 
-```{r read-data, message=FALSE}
+```{r read-data, message=FALSE, warning=FALSE}
 ambiance_scores <- read_csv("data/ambiance_scores.csv")
 drinks_scores <- read_csv("data/drinks_scores.csv")
 food_scores <- read_csv("data/food_scores.csv")
 price_scores <- read_csv("data/price_scores.csv")
 service_scores <- read_csv("data/service_scores.csv")
+all_bakeries <- read_csv("data/bakeries.csv")
+valid_bakeries <- read.table("data/valid_bakeries.txt", header = FALSE)$V1
 ```
 
 
-```{r ambiance-scores, message=FALSE}
-# bakeries_ambiance_scores_by_star <- ambiance_scores %>%
-#   mutate(across(-c(business_id,date), as.numeric)) %>% 
-#   group_by(business_id,stars) %>%
-#   summarize_at(vars(-c(date)), ~sum(.), .names = "{.col}") %>%
-#   ungroup() %>%
-#   mutate(amb_score = round(rowMeans(select(.,-c(business_id, stars))),2)) %>% 
-#   select(business_id,stars,amb_score) %>% 
-#   arrange(-amb_score)
-# 
-# bakeries_ambiance_scores_overall <- bakeries_ambiance_scores_by_star %>% 
-#   group_by(business_id) %>%
-#   summarize(amb_score = sum(amb_score)) %>% 
-#   arrange(-amb_score)
-# 
-# avg_ambiance_score <- mean(bakeries_ambiance_scores_overall$amb_score)
-# sd(bakeries_ambiance_scores_overall$amb_score)
-```
-
-```{r methods}
+```{r helper-functions}
 x_scores_by_star <- function(scores_df) {
   scores_df %>% 
-  mutate(across(-c(business_id, date, stars), as.numeric)) %>% 
-  mutate(across(-c(business_id, date, stars), ~coalesce(., 0))) %>%
-  group_by(business_id,stars) %>%
-  summarize_at(vars(-c(date)), ~sum(.), .names = "{.col}") %>%
-  ungroup() %>%
-  mutate(score = round(rowMeans(select(.,-c(business_id, stars))),2)) %>% 
-  select(business_id,stars,score) %>% 
-  arrange(-score)
+    filter(business_id %in% valid_bakeries) %>%
+    mutate(across(-c(business_id, date, stars), as.numeric)) %>% 
+    mutate(across(-c(business_id, date, stars), ~coalesce(., 0))) %>%
+    group_by(business_id,stars) %>%
+    summarize_at(vars(-c(date)), ~sum(.), .names = "{.col}") %>%
+    ungroup() %>%
+    mutate(score = round(rowMeans(select(.,-c(business_id, stars))),2)) %>% 
+    select(business_id,stars,score) %>% 
+    arrange(-score)
 }
 
 x_scores_overall <- function(scores_by_star_df) {
   scores_by_star_df %>% 
+    filter(business_id %in% valid_bakeries) %>%
     group_by(business_id) %>%
-    summarize(score = sum(score)) %>% 
+    summarize(stars = round(mean(stars),1), score = sum(score)) %>% 
     arrange(-score)
 }
 ```
@@ -70,70 +55,102 @@ x_scores_overall <- function(scores_by_star_df) {
 ```{r ambiance}
 ambiance_scores_by_star <- x_scores_by_star(ambiance_scores)
 ambiance_scores_overall <- x_scores_overall(ambiance_scores_by_star)
-colnames(ambiance_scores_by_star)[3] = colnames(ambiance_scores_overall)[2] = "Ambiance"
+colnames(ambiance_scores_by_star)[3] = colnames(ambiance_scores_overall)[3] = "Ambiance"
 ```
 
 ```{r drinks}
 drinks_scores_by_star <- x_scores_by_star(drinks_scores)
 drinks_scores_overall <- x_scores_overall(drinks_scores_by_star)
-colnames(drinks_scores_by_star)[3] = colnames(drinks_scores_overall)[2] = "Drinks"
+colnames(drinks_scores_by_star)[3] = colnames(drinks_scores_overall)[3] = "Drinks"
 ```
 
 ```{r food}
 food_scores_by_star <- x_scores_by_star(food_scores)
 food_scores_overall <- x_scores_overall(food_scores_by_star)
-colnames(food_scores_by_star)[3] = colnames(food_scores_overall)[2] = "Food"
+colnames(food_scores_by_star)[3] = colnames(food_scores_overall)[3] = "Food"
 ```
 
 ```{r price}
 price_scores_by_star <- x_scores_by_star(price_scores)
 price_scores_overall <- x_scores_overall(price_scores_by_star)
-colnames(price_scores_by_star)[3] = colnames(price_scores_overall)[2] = "Price"
+colnames(price_scores_by_star)[3] = colnames(price_scores_overall)[3] = "Price"
 ```
 
 ```{r service} 
 service_scores_by_star <- x_scores_by_star(service_scores)
 service_scores_overall <- x_scores_overall(service_scores_by_star)
-colnames(service_scores_by_star)[3] = colnames(service_scores_overall)[2] = "Service"
+colnames(service_scores_by_star)[3] = colnames(service_scores_overall)[3] = "Service"
 ```
 
-```{r joins}
+```{r bakeries}
+bakeries <- all_bakeries %>% select(business_id,name,is_open,postal_code) %>% filter(business_id %in% valid_bakeries)
+```
+
+```{r join-scores}
 df_list <- list(ambiance_scores_by_star, drinks_scores_by_star, food_scores_by_star, price_scores_by_star, service_scores_by_star)
 aspect_scores_by_star <- df_list %>% reduce(full_join, by=c('business_id','stars'))
 
 df_list <- list(ambiance_scores_overall, drinks_scores_overall, food_scores_overall, price_scores_overall, service_scores_overall)
-aspect_scores_overall <- df_list %>% reduce(full_join, by='business_id')
+aspect_scores_overall <- df_list %>% reduce(full_join, by=c('business_id','stars'))
 ```
 
-```{r add-avergages}
-avg_aspect_score_by_star <- aspect_scores_by_star %>% 
-  group_by(stars) %>% 
-  summarize_at(vars(-c(business_id)), ~round(mean(.),2), .names = "{.col}") %>% 
-  mutate(business_id = 'average', .before = stars)
-aspect_scores_by_star <- rbind(avg_aspect_score_by_star, aspect_scores_by_star)
 
-avg_aspect_score_overall <- aspect_scores_overall %>% 
-  summarize_at(vars(-c(business_id)), ~round(mean(.),2), .names = "{.col}") %>% 
-  mutate(business_id = 'average', .before = Ambiance)
-aspect_scores_overall <- rbind(avg_aspect_score_overall, aspect_scores_overall)
+```{r add-limits}
+get_avg <- function(df,col=NA) {
+  if(!is.na(col))
+    df <- df %>% group_by(.data[[col]]) 
+  df %>% 
+    summarize_at(vars(-c(business_id)), ~round(mean(.),2), .names = "{.col}") %>% 
+    mutate(business_id = 'average', .before = stars)
+}
+
+get_max <- function(df,col=NA) {
+  if(!is.na(col))
+    df <- df %>% group_by(.data[[col]]) 
+  df %>% 
+    summarize_at(vars(-c(business_id)), ~max(.), .names = "{.col}") %>% 
+    mutate(business_id = 'max', .before = stars)
+}
+get_min <- function(df,col=NA) {
+  if(!is.na(col))
+    df <- df %>% group_by(.data[[col]]) 
+  df %>% 
+    summarize_at(vars(-c(business_id)), ~min(.), .names = "{.col}") %>% 
+    mutate(business_id = 'min', .before = stars)
+}
+
+add_limits <- function(df,col=NA) {
+  rbind(get_max(df,col),get_min(df,col),get_avg(df,col),df)
+}
+
+aspect_scores_by_star <- rbind(add_limits(aspect_scores_by_star,'stars'))
+aspect_scores_overall <- rbind(add_limits(aspect_scores_overall))
 ```
 
-```{bakeries}
+```{r join-bakeries, message=FALSE}
+aspect_scores_by_star <- full_join(bakeries, aspect_scores_by_star)
+aspect_scores_overall <- full_join(bakeries, aspect_scores_overall)
 
+aspect_scores_by_star <- rbind(aspect_scores_by_star %>% tail(15), aspect_scores_by_star %>% slice(1:(n()-15)))
+aspect_scores_overall <- rbind(aspect_scores_overall %>% tail(3), aspect_scores_overall %>% slice(1:(n()-3)))
 ```
 
+```{r write-data}
+write_csv(aspect_scores_by_star, "data/aspect_scores_by_star.csv")
+write_csv(aspect_scores_overall, "data/aspect_scores_overall.csv")
+```
 
 ```{r radar-chart-data}
-library(fmsb)
-max_min <- data.frame(
-  Ambiance = c(22, -0.1), Drinks = c(22, -0.1), Food = c(22, -0.1), 
-  Price = c(22, -0.1), Service = c(22, -0.1), row.names = c('max','min')
-)
+# library(fmsb)
+# max_min <- data.frame(
+#   Ambiance = c(20, -0.1), Drinks = c(22, -0.1), Food = c(22, -0.1), 
+#   Price = c(22, -0.1), Service = c(22, -0.1), row.names = c('max','min')
+# )
 
-businesses <- c('average', 'Ss6f5v_t5Vddiaz4ZOxL0g', '9uJuBPIQyrC0v9pVv3JKRQ')
-sample <- as.data.frame(aspect_scores_overall %>% filter(business_id %in% businesses))
+businesses <- c('max','min','average', 'Ss6f5v_t5Vddiaz4ZOxL0g', '9uJuBPIQyrC0v9pVv3JKRQ')
+sample <- as.data.frame(aspect_scores_overall) %>% filter(business_id %in% businesses) 
 rownames(sample) <- sample$business_id
-sample <- rbind(max_min, sample %>% select(-business_id))
+sample <- sample %>% select(-colnames(aspect_scores_overall)[seq(1:5)])
 ```
 
 ```{r radar-chart-function}
